--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,23 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Kelvin's website
+title: Kelvin's HCI 376 Personal Page
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Kelvin's HCI 376 Personal Page
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - HCI Website: "https://sites.google.com/williams.edu/csci376-2018/home?authuser=0"
+  Group Project Page: "https://krtejeda.github.io/PersonalCuraTour/"
+  My Github: "https://github.com/krtejeda"
+  Assignments:
+    - Bad Design: "2018-09-08-bad-design"
+    - Good Design: "2018-09-10-good-design"
+    - Project Proposal: "2018-09-19-project-proposal"
+    - Research Paper Report: "2018-11-15-research-paper-report"
+    - Design Manifesto: "2018-12-3-design-manifesto"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -69,10 +74,10 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  #email: "krt5@wi"
+  #facebook: daattali
+  github: krtejeda
+  #twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
@@ -89,10 +94,10 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
+  twitter: false
+  facebook: false
   google: false
-  linkedin: true
+  linkedin: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
